2011-05-31 Roman
- DAQ.AMRDevs, DAQ.BFN, DAQ.DCON, DAQ.OPC_UA, DAQ.SNMP, DAQ.Siemens, DAQ.System:
    The "Calc schedule" is replaced by "Acquisition schedule".


2011-05-31 Maxim
- !:UI.Vision: The drawing figures during creation with the help of mouse is added for the primitive ElFigure.


2011-05-30 Roman
- DAQ.BFN: BFN alarms category is made unified.
- FIX:DAQ.BlockCalc: An archive period for periodic taks set is fixed.
- DAQ.DCON, DAQ.LogicLev, DAQ.Siemens, DAQ.System: Block schemes calculate by schedule, include periodic and cron, is added.
- !:FIX:UI.QTCfg, UI.Vision: Syntax highlight is fixed for multilevel rules and end regular expression check, for blocks.


2011-05-28 Roman
- DAQ, DAQ.BFN, DAQ.ModBus: Specific function for alarms creation for data sources' objects TController::alarmSet() is added and used.


2011-05-26 Roman
- DAQ.BlockCalc: Block schemes calculate by schedule, include periodic and cron, is added.


2011-05-25 Roman
- Archive: Regular expression using alow is described in context tooltips of messages get by the category template.
- XMLNode: New save flag XMLNode::XHTMLHeader is added for standard XHTML header place at save.
    Target codepage set is added to save function.
    Caseinsensible search node by tag name is added.
- !!:Protocol.HTTP: HTML-template to custom interface for internal content support is aded.


2011-05-20 Maxim
- FIX:UI.Vision: The falling of the system when draw the fill without any present figures is fixed for the primitive ElFigure.


2011-05-18 Maxim
- FIX:UI.Vision: The repainting of the figures in the attrSet function is fixed for the primitive ElFigure.


2011-05-18 Roman
- !!!!:TArchives, Archive.DBArch, Archive.FSArch: Up time border is added to archives request messages for prevent hang on too wide requests.
- !!!!:TArchives: Regular expression use allow is added for category match by "/match/".
- !:TRegExp: The function for test expressions by pattern is moved to object TRegExp.